fix modificar-usuario, script db